upgrade dependencies; use OpenJDK 11
Close #126